--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>git practice</title>
 </head>
 <body>
+	<h1>This is a new branch and I have made a change to my file</h1>
 
 </body>
 </html>
